<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/amount"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="44dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintVertical_bias="0.152"
            android:hint="@string/editTextAmount"/>
    <EditText
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/rate" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="44dp" android:hint="@string/editTextRate"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.152"/>
    <EditText
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/tenure"
            android:hint="@string/editTextTenure" android:layout_marginStart="44dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintVertical_bias="0.297"/>
    <EditText
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/days"
            android:hint="@string/editTextDays" android:layout_marginEnd="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.297"/>
    <TextView
            android:text="@string/Textdofe"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:textAlignment="center"
            android:id="@+id/first_emi_date" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.675" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"/>
    <EditText
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/dod" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="44dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.417"
            android:hint="@string/editTextdod"/>
    <TextView
            android:text="@string/TextEMI"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:id="@+id/emi_amount"
            android:layout_marginTop="8dp" android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.494" app:layout_constraintVertical_bias="0.775"/>
    <Button
            android:text="@string/btnCal"
            android:layout_width="120dp"
            android:layout_height="52dp"
            android:id="@+id/calculate" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.917"/>
    <TextView
            android:text="@string/Textdod"
            android:layout_width="144dp"
            android:layout_height="19dp"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.151"
            app:layout_constraintVertical_bias="0.428"/>
    <Button
            android:text="@string/btnSet"
            android:layout_width="100dp"
            android:layout_height="52dp"
            android:id="@+id/set" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.549"/>

</androidx.constraintlayout.widget.ConstraintLayout>